test/inductive/inductive/reject_type_mismatch.qdt
import Std.Eq
import Std.Nat

def bad (a b : Nat) : Eq Nat a b := Eq.refl Nat a
